# zlib

./: CMakeLists.txt  build.sh  main.cpp  mas_2023_05_28.txt  mas_2023_05_29.txt  zlib.tar
zlib-1.2.13/: Makefile  build.sh  compress.lo  deflate.lo  example  example64  examplesh  gzread.lo  gzwrite.lo  infback.lo  inflate.lo  minigzip  minigzip64  uncompr.lo  zutil.lo
zlib-1.2.13/contrib/minizip/: Makefile
